--- a/docs/_includes/bootstrap_css.html
+++ b/docs/_includes/bootstrap_css.html
@@ -95,6 +95,28 @@
 		filter: brightness(85%);
 	}
 
+	/* "trophy" colors */
+	.border-sr-top10 {
+		border-color: #e5be30 !important;
+	}
+	.text-sr-top10 {
+		color: #e5be30;
+	}
+
+	.border-sr-top100 {
+		border-color: #a0a0a0 !important;
+	}
+	.text-sr-top100 {
+		color: #a0a0a0;
+	}
+
+	.border-sr-top500 {
+		border-color: #bf780f !important;
+	}
+	.text-sr-top500 {
+		color: #bf780f;
+	}
+
 	/*
 	ul.nav li a, ul.nav li a:visited {
     color: darkturquoise !important;
