--- a/docs/_includes/dbtable.html
+++ b/docs/_includes/dbtable.html
@@ -44,7 +44,7 @@
 							<span class="fa-layers fa-fw">
 								<i class="fas fa-square" data-fa-transform="shrink-3 up-3"></i>
 								<span class="fa-layers-text fa-inverse" data-fa-transform="shrink-8 up-4 left-0.5" style="font-weight:400">
-									&alpha;
+									&beta;
 								</span>
 							</span>
 						</th>
@@ -102,7 +102,7 @@
 							<span class="fa-layers fa-fw">
 								<i class="fas fa-square" data-fa-transform="shrink-3 up-3"></i>
 								<span class="fa-layers-text fa-inverse" data-fa-transform="shrink-8 up-4 left-0.5" style="font-weight:400">
-									&alpha;
+									&beta;
 								</span>
 							</span>
 						</th>
@@ -160,7 +160,7 @@
 							<span class="fa-layers fa-fw">
 								<i class="fas fa-square" data-fa-transform="shrink-3 up-3"></i>
 								<span class="fa-layers-text fa-inverse" data-fa-transform="shrink-8 up-4 left-0.5" style="font-weight:400">
-									&alpha;
+									&beta;
 								</span>
 							</span>
 						</th>
