--- a/docs/_layouts/player_breakdown.html
+++ b/docs/_layouts/player_breakdown.html
@@ -439,9 +439,9 @@
                     }
                   });
                 } else {
-                  $('#top10_h2h').html('0-0')
-                  $('#top100_h2h').html('0-0')
-                  $('#top500_h2h').html('0-0')
+                  $('#top10_h2h').html('<span class="text-secondary">0-0</span>')
+                  $('#top100_h2h').html('<span class="text-secondary">0-0</span>')
+                  $('#top500_h2h').html('<span class="text-secondary">0-0</span>')
                   //$('#top10_h2h_div').addClass('invisible');
                   //$('#top100_h2h_div').addClass('invisible');
                 }
