--- a/docs/_includes/bootstrap_css.html
+++ b/docs/_includes/bootstrap_css.html
@@ -148,5 +148,29 @@
 		color: lightseagreen !important;
 		font-weight: 500 !important;
 	}
+	a.link-unstyled {
+	  &,
+	  &:visited,
+	  &:hover,
+	  &:active,
+	  &:focus,
+	  &:active:hover {
+	    font-style: inherit;
+	    color: inherit !important;
+	    background-color: transparent;
+	    font-size: inherit;
+	    text-decoration: none;
+	    font-variant: inherit;
+	    font-weight: inherit;
+	    line-height: inherit;
+	    font-family: inherit;
+	    border-radius: inherit;
+	    border: inherit;
+	    outline: inherit;
+	    box-shadow: inherit;
+	    padding: inherit;
+	    vertical-align: inherit;
+	  }
+	}
 </style>
 <!--<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fork-awesome@1.1.7/css/fork-awesome.min.css" integrity="sha256-gsmEoJAws/Kd3CjuOQzLie5Q3yshhvmo7YNtBG7aaEY=" crossorigin="anonymous">-->
