--- a/docs/_includes/bootstrap_css.html
+++ b/docs/_includes/bootstrap_css.html
@@ -4,6 +4,7 @@
 
 <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.19/css/dataTables.bootstrap4.min.css">
+<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/responsive/2.2.3/css/responsive.bootstrap4.min.css">
 <!-- icons stylesheet -->
 <script defer src="https://use.fontawesome.com/releases/v5.8.1/js/all.js" integrity="sha384-g5uSoOSBd7KkhAMlnQILrecXvzst9TdC09/VM+pjDTCM+1il8RHz5fKANTFFb+gQ" crossorigin="anonymous"></script>
 <!--<script src="https://use.fontawesome.com/releases/v5.8.1/js/all.js" data-auto-replace-svg="nest"></script>-->
@@ -96,25 +97,48 @@
 	}
 
 	/* "trophy" colors */
+	.border-sr-top5 {
+		border-color: #f4666f !important; /* soft red */
+	}
+	.text-sr-top5 {
+		color: #f4666f; /* soft red */
+	}
+
 	.border-sr-top10 {
-		border-color: #e5be30 !important;
+		border-color: #b788ea !important; /* lavender */
 	}
 	.text-sr-top10 {
-		color: #e5be30;
+		color: #b788ea; /* lavender */
+	}
+
+	.border-sr-top20 {
+		border-color: #60a2e5 !important; /* soft blue */
+	}
+	.text-sr-top20 {
+		color: #60a2e5; /* soft blue */
+	}
+
+	.border-sr-top50 {
+		border-color: #4ae2d8 !important;   /* cyan */
+		/*border-color: #e5be30 !important;*/   /* gold */
+	}
+	.text-sr-top50 {
+		color: #4ae2d8;   /* cyan */
+		/*color: #e5be30;*/   /* gold */
 	}
 
 	.border-sr-top100 {
-		border-color: #a0a0a0 !important;
+		border-color: #a0a0a0 !important;   /* silver */
 	}
 	.text-sr-top100 {
-		color: #a0a0a0;
+		color: #a0a0a0;   /* silver */
 	}
 
 	.border-sr-top500 {
-		border-color: #bf780f !important;
+		border-color: #bf780f !important;   /* bronze */
 	}
 	.text-sr-top500 {
-		color: #bf780f;
+		color: #bf780f;   /* bronze */
 	}
 
 	/*
