--- a/docs/_includes/bootstrap_scripts.html
+++ b/docs/_includes/bootstrap_scripts.html
@@ -1,5 +1,5 @@
 <!-- jQuery base imports -->
-<script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.js"></script>
+<script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <!-- Popper.js and Tooltip.js imports -->
 <script type="text/javascript" src="https://unpkg.com/popper.js/dist/umd/popper.min.js"></script>
 <!-- <script type="text/javascript" src="https://unpkg.com/tooltip.js/dist/umd/tooltip.min.js"></script>-->
