--- a/docs/_includes/player_profile.html
+++ b/docs/_includes/player_profile.html
@@ -66,9 +66,20 @@
 		<!-- line break -->
 		<hr class="my-4" style="padding:0px;">
 		<!-- skills at a glance -->
-		<div class="custom-control custom-switch">
-		  <input type="checkbox" class="custom-control-input" id="skill_switch">
-		  <label class="custom-control-label ranks-switch" for="skill_switch"><p class="text-muted small">Toggle Ranks</p></label>
+		<div class="d-flex flex-row justify-content-between">
+			<div class="custom-control custom-switch">
+			  <input type="checkbox" class="custom-control-input" id="skill_switch">
+			  <label class="custom-control-label ranks-switch" for="skill_switch"><p class="text-muted small">Toggle Ranks</p></label>
+			</div>
+			<div id="full_event_link_div" style="line-height:1;">
+				<span class="text-muted small font-italic" style="text-decoration:none;">
+					Head-to-Head 
+					<a href="" id="player_h2h_link" style="text-decoration:none;">Lookup</a>
+				</span>
+				<span class="text-muted small">
+					<a href="" id="player_h2h_link_2" style="text-decoration:none;"> ⟶</a>
+				</span>
+			</div>
 		</div>
 		<div class="d-flex flex-row justify-content-between" style="margin:0px;padding:0px;">
 			<div class="btn-group" role="group" aria-label="Skills" id="player_skills_div" style="text-decoration:none;">
@@ -116,15 +127,15 @@
 				</a>
 			</div> <!-- skills -->
 			<div class="btn-group" role="group" aria-label="H2H at a glance" id="player_h2h_div">
-				<a class="btn btn-default" href="#" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="top-10-button" id="top10_h2h_div">
+				<a class="btn btn-default" href="#top10_chart_container" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="top-10-button" id="top10_h2h_div">
 					<p class="text-muted text-center font-italic">vs. Top 10 </p>
 					<p class="lead text-center" id="top10_h2h"></p>
 				</a>
-				<a class="btn" href="#" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="top-100-button" id="top100_h2h_div">
+				<a class="btn" href="#top100_chart_container" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="top-100-button" id="top100_h2h_div">
 					<p class="text-muted text-center font-italic">vs. Top 100 </p>
 					<p class="lead text-center" id="top100_h2h"></p>
 				</a>
-				<!--<a class="btn" href="#" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="top-500-button" id="top500_h2h_div">
+				<!--<a class="btn" href="#top500_chart_container" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="top-500-button" id="top500_h2h_div">
 					<p class="text-muted text-center font-italic">vs. Top 500 </p>
 					<p class="lead text-center" id="top500_h2h"></p>
 				</a>-->
@@ -173,6 +184,23 @@
 					<canvas id="srank_sigmoid" class="p-3 chart" aria-label="srank-sigmoid" width="400" height="200"></canvas>
 				</div>
 			</div>
+		</div>
+		<div id="top10_chart_container" class="container collapse" style="position:relative;width:100%;">
+			<table id="top10_chart" class="display table nowrap" style="width:100%">
+				<thead>
+					<tr>
+						<th></th>
+						<th>Rank</th>
+						<th>Tag</th>
+						<th>ID</th>
+						<th>Wins</th>
+						<th>Losses</th>
+						<th>Win %</th>
+					</tr>
+				</thead>
+				<tbody id="top10_chart_body">
+				</tbody>
+			</table>
 		</div>
 		<!--<div id="trueskill_chart_container" class="chart-container collapse" style="position: relative;">
 			<div class="text-muted font-weight-light small invisible">~</div>
