--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -8,8 +8,9 @@
     <div class="row">
       <div class="col">
         <ul class="contact-list">
-          <li class="p-name">Report issues to: </li><li><a class="u-email" href="mailto:{{ site.support_email }}">{{ site.support_email }}</a></li>
-          <li class="p-name">For business inquiries: </li><li><a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a></li></ul>
+          <!--<li class="p-name">Report issues to: </li><li><a class="u-email" href="mailto:{{ site.support_email }}">{{ site.support_email }}</a></li>-->
+          <!--<li class="p-name">For business inquiries: </li><li><a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a></li></ul>-->
+          <li class="p-name">For business inquiries: </li><li><a class="u-email" href="mailto:santiagoloane@gmail.com">santiagoloane@gmail.com</a></li></ul>
       </div>
 
       <div class="col"><ul class="social-media-list">
