--- a/docs/_includes/player_profile.html
+++ b/docs/_includes/player_profile.html
@@ -131,7 +131,7 @@
 					<p class="text-muted text-center font-italic">vs. Top 10 </p>
 					<p class="lead text-center" id="top10_h2h"></p>
 				</a>
-				<a class="btn" href="#top100_chart_container" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="top-100-button" id="top100_h2h_div">
+				<a class="btn disabled" href="#top100_chart_container" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="top-100-button" id="top100_h2h_div">
 					<p class="text-muted text-center font-italic">vs. Top 100 </p>
 					<p class="lead text-center" id="top100_h2h"></p>
 				</a>
